:sparkles: adding links

--- a/01 - Drum Kit/index.html
+++ b/01 - Drum Kit/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">    
     <link rel="stylesheet" href="app.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
 </head>
 <body>
     <div class="keys">
@@ -58,6 +59,15 @@
     <audio data-key="49" src="sounds/kick.wav"></audio>
     <audio data-key="50" src="sounds/openhat.wav"></audio>
     <audio data-key="51" src="sounds/boom.wav"></audio>
+
+    <div class="links">
+        <a href="http://js30-drum-kit.surge.sh/" target="_blank">
+            <i class="fas fa-globe fa-3x"></i>
+        </a>
+        <a href="https://codepen.io/cesaramirez/full/baxpQm" target="_blank">
+            <i class="fab fa-codepen fa-3x"></i>
+        </a>
+    </div>
 
     <script src="app.js"></script>
 </body>
