--- a/02 - CSS + JS Clock/index.html
+++ b/02 - CSS + JS Clock/index.html
@@ -23,10 +23,10 @@
     </div>
 
     <div class="links">
-        <a href="http://js30-drum-kit.surge.sh/" target="_blank">
+        <a href="https://github.com/cesaramirez/Javascript30/tree/master/02%20-%20CSS%20%2B%20JS%20Clock" target="_blank">
             <i class="fab fa-github fa-2x"></i>
         </a>
-        <a href="https://codepen.io/cesaramirez/full/baxpQm" target="_blank">
+        <a href="https://codepen.io/cesaramirez/full/bamqEN" target="_blank">
             <i class="fab fa-codepen fa-2x"></i>
         </a>
     </div>
