:sparkles: adding icons for github and codepen

--- a/03 - Playing with CSS Variables and JS/index.html
+++ b/03 - Playing with CSS Variables and JS/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
 </head>
 
 <body>
@@ -49,6 +50,16 @@
     </div>
 
     <img src="https://picsum.photos/700/400/?random" width="50%">
+
+    <div class="links">
+        <a href="https://github.com/cesaramirez/Javascript30/tree/master/03%20-%20Playing%20with%20CSS%20Variables%20and%20JS"
+            target="_blank">
+            <i class="fab fa-github fa-2x"></i>
+        </a>
+        <a href="https://codepen.io/cesaramirez/full/VyVmGe/" target="_blank">
+            <i class="fab fa-codepen fa-2x"></i>
+        </a>
+    </div>
 
     <script src="app.js"></script>
 </body>
