:sparkles: adding links github and codepen

--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -14,6 +14,15 @@
   <div class="container">
     <p class="title">Psst: have a look at the JavaScript Console 💁 👇</p>
   </div>
+  <div class="links">
+    <a href="https://github.com/cesaramirez/Javascript30/tree/master/04%20-%20Array%20Cardio%20Day%201"
+      target="_blank">
+      <i class="fab fa-github fa-2x"></i>
+    </a>
+    <a href="https://codepen.io/cesaramirez/pen/MrZjaw/" target="_blank">
+      <i class="fab fa-codepen fa-2x"></i>
+    </a>
+  </div>
   <script src="app.js"></script>
 </body>
 
