:sparkles: adding links to codepen and  github

--- a/05 - Flex Panel Gallery/index.html
+++ b/05 - Flex Panel Gallery/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,9 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
     <link rel="stylesheet" href="app.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
 </head>
+
 <body>
     <div class="panels">
         <div class="panel panel1">
@@ -37,6 +40,18 @@
             <p>Motion</p>
         </div>
     </div>
+
+    <div class="links">
+        <a href="https://github.com/cesaramirez/Javascript30/tree/master/05%20-%20Flex%20Panel%20Gallery"
+            target="_blank">
+            <i class="fab fa-github fa-2x"></i>
+        </a>
+        <a href="https://codepen.io/cesaramirez/full/zpeYOy/" target="_blank">
+            <i class="fab fa-codepen fa-2x"></i>
+        </a>
+    </div>
+
     <script src="app.js"></script>
 </body>
+
 </html>
